# thehackerdex

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0568e864ce93016702a5760260d92e79fc1b6cd85380ceda29635367a9be6336.json  query-1507422ff119129de03fed6ae8348b71d0e4ae9b9d48a37600c009f18f316e87.json  query-294d03e5b6d9aeeaa629cae78c0553a0015aa65a5641d9846866a8f09a31dde2.json  query-3649f2d601c0800cd6cea95058d212bfbcfabca1d404f0355aac7827dd4477f2.json  query-67f6f9e617cc36077eebfa64903c7a357955ffbd98aabb13ae28530391dfbf63.json  query-93bd2321387c613b140e918d81827070ea416895e57c749bde813e1937bbfad0.json  query-9a626c5dc49f6075d0f9aa93c13241b23f51ac9ca5b130ffba19085bb83f095f.json  query-9f41bcdae8886db1de09af3a9798ed643048574edba317d254a6e305cd4aeac9.json  query-a5ba35dedd953a53a07b16ecfdc32abfdeabd7a98caf24a6ae5c23a1fb3fe282.json  query-b73786f44ea36fbb62b9856bae4faf4b1457663ee257e0592c6c926d2e00c79e.json  query-d76072a56840b08631f9aa736126f362e5b8eecce8afa4b365ee0ea7408c0c31.json  query-ff5671dbb3ba34d083ea98f4847f767e25f1dab456899031161970d32529c9e3.json
api_responses/: chainabuse_response_CEzN7mqP9xoxn2HdyW6fjEJ73t7qaX9Rp2zyS6hb3iEu.json
config/: analyze_config.toml  feature_flags.toml  heuristic_weights.toml  monitoring.toml
db/: README.md
docs/: ARCHITECTURE.md  db_migration.md  fund_tracing.md  heuristics_weights.md  monitoring_config.md  whitepaper.md
init-db/: 01-create-tables.sql
migrations/20250418195100_initial_schema/: up.sql
migrations/20250419000001_create_trace_links_table/: up.sql
samples/: binance_last_1k_wallets_transaction.txt  blacklist_kelsier_ventures_parse.csv  known_addresses.csv  known_programs.csv  osint_bridges_worms.csv  related_to_my_account.csv
src/: lib.rs  main.rs
src/analysis/: mod.rs  transaction_analysis.rs
src/config/: feature_flags.rs  mod.rs
src/db/: mod.rs  models.rs
src/discovery/: mod.rs  tracer.rs
src/error/: mod.rs
src/heuristic_engine/: bidirectional_flow_heuristics.rs  transaction_heuristics.rs  types.rs  wallet_heuristics.rs
src/osint/: chainabuse.rs
src/rpc/: client.rs  fund_tracing.rs  mod.rs
tests/: analysis_validation_tests.rs  analyze_known_wallets_tests.rs  bidirectional_flow_heuristics_tests.rs  db_data_validation.rs  db_mock_tests.rs  db_tests.rs  flow_pattern_heuristics_tests.rs  heuristic_engine_tests.rs  mock_rpc_tests.rs  rpc_client_tests.rs  run_heuristics_tests.rs  token_account_filtering_tests.rs  transaction_parser_tests.rs  wallet_analyzer_tests.rs  wallet_behavior_heuristics_tests.rs
thehackerdex/: Cargo.toml
thehackerdex-api/: Cargo.toml
thehackerdex-api/src/: config.rs  errors.rs  main.rs  models.rs
thehackerdex-api/src/handlers/: analysis_handler.rs  chat_handler.rs  data_handler.rs  mod.rs
thehackerdex/migrations/20250418195100_initial_schema/: down.sql
thehackerdex/migrations/20250419000001_create_trace_links_table/: down.sql
thehackerdex/src/: lib.rs  main.rs  wallet_analysis.rs
thehackerdex/src/analysis/: program_analyzer.rs  transaction_analysis.rs  transaction_parser.rs  wallet_analyzer.rs
thehackerdex/src/config/: mod.rs  monitoring.rs
thehackerdex/src/db/: mod.rs  repository.rs
thehackerdex/src/demo/: mod.rs
thehackerdex/src/heuristic_engine/: config.rs  context_builder.rs  mod.rs  risk_scoring.rs
thehackerdex/src/osint/: chainabuse.rs  mod.rs
thehackerdex/src/rpc/: monitoring.rs
