[package]
name = "hackerdex"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Solana client libraries
solana-client = "2.2.2"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.2"
solana-rpc-client-api = "2.2.2"
solana-transaction-status-client-types = "2.2.2"

# Asynchronous runtime
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "postgres",
    "json",
    "time",
    "migrate",
] }

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"

# Rate limiting
governor = "0.6.0"

# Random number generation
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration management
config = "0.13"
dotenv = "0.15"

# Command line argument parsing
clap = "4.4"

# HTTP client for OSINT crawler
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding/decoding
base64 = "0.22.0"

# Regular expressions
regex = "1.10.3"

# SPL Token
spl-token = "4.0.0"

[dev-dependencies]
# Mock HTTP server for testing
mockito = "1.2.0"
